# LibraryManagementSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cli.txt  cli_feature.txt
.github/workflows/: cmake-multi-platform.yml
src/: Book.cpp  Book.h  Inventory.cpp  Inventory.h  Member.cpp  Member.h  Menu.cpp  Menu.h  State.h  Validation.cpp  Validation.h  main.cpp
tests/: test_book.cpp  test_member.cpp
